--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -6,8 +6,8 @@ body {
 
 .window-app {
   .window-header {
-    background: url(/systems/pirateborg/ui/parchment-2.jpg);
-    color: var(--background-color);
+    background: var(--highlight-background-color);
+    color: var(--foreground-color);
   }
 }
 
