--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -6,7 +6,7 @@
   --foreground-color: #ffffff;
   --foreground-alt-color: #ffe900;
 
-  --highlight-background-color: #ff0000;
+  --highlight-background-color: #d20608;
   --highlight-foreground-color: #FFFFFF;
   --sidebar-background-color: #000000;
   --sidebar-foreground-color: #ffffff;
