--- a/templates/actor/common/actor-equipment-list.html
+++ b/templates/actor/common/actor-equipment-list.html
@@ -18,7 +18,9 @@
       ({{item.data.totalContainerSpace}} / {{item.data.capacity}}) {{/ifEq}}
       {{#ifGt item.data.quantity 1}} ({{item.data.quantity}}) {{/ifGt}}
     </h4>
-    <div class="item-buttons"></div>
+    <div class="item-buttons">
+      {{> "systems/pirateborg/templates/actor/common/actor-item-button.html" item=item}}
+    </div>
     <div class="item-controls">
       {{#if item.data.canPlusMinus}}
       <a class="item-control item-qty-plus" title="Add Quantity"
