--- a/scss/pirateborg/_sheet.scss
+++ b/scss/pirateborg/_sheet.scss
@@ -113,7 +113,10 @@
         line-height: 32px;
         width: 100%;
         border-radius: 16px;
-
+        white-space: nowrap;
+        padding-left: 16px;
+        padding-right: 16px;
+        
         &:hover {
           color: var(--highlight-foreground-color);
           text-shadow: 0 0 16px var(--highlight-background-color);
